2001-08-01  Hartmut Penner  <hpenner@de.ibm.com>

        * varasm.c (decode_rtx_const): Allow unspec (symbol_ref) in 
	constant pool to be identical by string address and index.
	
2001-08-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* params.def (PARAM_MAX_INLINE_INSNS): Change default to 600.
	Correct comment that had been missed in the previous change.

2001-08-01  Robert Lipe  <robertl@caldera.com>

	* dwarfout.c: Remove reference to README.DWARF.

2001-08-01  Richard Henderson  <rth@redhat.com>

	* rtl.c (read_name): Consider \r whitespace.

2001-08-01  Mark Kettenis  <kettenis@gnu.org>

	* unwind-pe.h (base_of_encoded_value, read_encoded_value): Define
	only if NO_BASE_OF_ENCODED_VALUE isn't defined.
	* unwind-dw2-fde.c (NO_BASE_OF_ENCODED_VALUE): Define before
	including "unwind-pe.h".

Wed Aug  1 20:15:33 CEST 2001  Jan Hubicka  <jh@suse.cz>

	* i386-protos.h (ix86_output_main_function_alignment_hack): Declare.
	* i386.c (ix86_output_main_function_alignment_hack): New global
	function.
	* i386.h (FUNCTION_PROLOGUE): New macro.
	* osf1elf.h (FUNCTION_PROLOGUE): Call new function.
	* osfrose.h (FUNCTION_PROLOGUE): Likewise.

2001-08-01  H.J. Lu <hjl@gnu.org>

	* config/mips/linux.h (ASM_OUTPUT_IDENT): Defined.

2001-08-01  H.J. Lu <hjl@gnu.org>

	* gcc/config/mips/linux.h (ASM_OUTPUT_SOURCE_LINE): Defined.

2001-07-31  Jeff Sturm  <jsturm@one-point.com>

        * except.c (duplicate_eh_regions): Test n_array[i] for NULL.

2001-07-30  Roman Zippel  <zippel@linux-m68k.org>

	* config/m68k/m68k.md: Replace all general_operand with
	nonimmediate_operand for all destinations.
	* config/m68k/m68k.c: Include expr.h and reload.h.
	(not_sp_operand): Check nonimmediate_operand.

2001-07-30  Roman Zippel  <zippel@linux-m68k.org>

	* config/m68k/m68k.h (TARGET_SWITCHES/TARGET_OPTIONS):
	Add missing doc strings.
	* config/m68k/linux-aout.h (SUBTARGET_SWITCHES): Likewise.
	* config/m68k/linux.h (SUBTARGET_SWITCHES): Likewise.

2001-07-30  H.J. Lu <hjl@gnu.org>
